synth.css
@media screen
{
	html, body
	{
		width: 100%;
		height: 100%;
		margin: 0px;
		padding: 0px;
	}

	div.keyboard
	{
		/* Frame of the keyboard. */
		width: 90%;
		height: 80%;
		padding: 4% 0% 4% 4%;
		border-radius: 10px; /* Nice rounded corner. */
		background-color: black; /* That's for browsers not supporting gradients. */

		/* Now look at this messs. */
		background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#555));
		background: -webkit-linear-gradient(#000, #555);
		background: -o-linear-gradient(#000, #555);
		background: -moz-linear-gradient(100% 100% 90deg, #555, #000);
	}

	div.key
	{
		/* Common properties of keys. */
		position: relative;
		float: left;
		margin: 0px;
		padding: 0px;
		border: solid 2px #303030;
		border-radius: 4px;
		background: solid white;
	}

	div.key p
	{
		/* Caption of the key should be displayed at the bottom. */
		position: absolute;
		width: 100%;
		bottom: 5%;
		margin: 0px;
		padding: 0px;
		font-size: 80%;
		text-align: center;
	}

	div.white.key
	{
		width: 4.5%;
		height: 90%;
		z-index: 1;
		background: white;
		color: black;
	}

	div.black.key
	{
		width: 3%;
		height: 60%;
		margin: 0px -2% 0px -2%;
		z-index: 2;
		background: black;
		color: white;
	}

/*/ div.key:hover, /* This is just for debugging. */
	div.pressed.key
	{
		border-color: #eff;
		background: #cef;
		color: black;
	}
}
@media screen and (max-width: 800px)
{
	div.key p
	{
		display: none; /* Hide keyboard mapping on touch based devices. */
	}
}

